# Course_work_5

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: dbmanager.py  hhapi.py  hhapi_test.py  utils.py  vacancy.py
