[tool.poetry]
name = "course_work_5"
version = "0.1.0"
description = ""
authors = ["Dmitry Moskalev <moskalev199618120@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
